# valorant-ai-coach

./: .gitignore  README.md
valorant-coach-backend/: pyproject.toml
valorant-coach-backend/app/: database.py  main.py
valorant-coach-backend/app/models/: analysis.py  dataset.py  knowledge.py
valorant-coach-backend/app/routers/: analysis.py  dataset.py  knowledge.py
valorant-coach-backend/app/schemas/: analysis.py  dataset.py
valorant-coach-backend/app/services/: ability_analyzer.py  audio_processor.py  crosshair_analyzer.py  decision_analyzer.py  game_state_parser.py  map_analyzer.py  movement_analyzer.py  pro_vod_analyzer.py  tactical_engine.py  video_pipeline.py
valorant-coach-frontend/: index.html  package-lock.json  package.json
valorant-coach-frontend/src/: App.tsx  index.css
valorant-coach-frontend/src/api/: client.ts  datasets.ts  knowledge.ts
valorant-coach-frontend/src/components/: DatasetManager.tsx  KnowledgeBase.tsx
valorant-coach-frontend/src/types/: analysis.ts  dataset.ts  knowledge.ts
